ZipcodeInput and ZipcodeDialog

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -20,5 +20,6 @@ $icon-font-path: "/bower_components/bootstrap-sass-official/assets/fonts/";
     right: 0;
 }
 
-.zipcode{
+.zipcodeInput{
+    width: 250px;
 }
