--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -23,3 +23,10 @@ $icon-font-path: "/bower_components/bootstrap-sass-official/assets/fonts/";
 .zipcodeInput{
     width: 250px;
 }
+
+
+/* .modal-backdrop fix */
+.modal-backdrop {
+    bottom: 0;
+    background-color: #fff;
+}
