Using google maps #18

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,7 +12,7 @@ $icon-font-path: "/bower_components/bootstrap-sass-official/assets/fonts/";
 /* Home page view */
 
 .map-background {
-    background-image: url('../images/google_maps.jpg');
+    /* background-image: url('../images/google_maps.jpg'); */
     position: absolute;
     top: 0;
     left: 0;
