--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -24,6 +24,12 @@ $icon-font-path: "/bower_components/bootstrap-sass-official/assets/fonts/";
     width: 250px;
 }
 
+.zipcodeValidCheck{
+    color: green;
+    display: none;
+    font-size: 13px;
+}
+
 /* Search page view */
 
 .bs-docs-sidebar.places-container {
