--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,22 +9,45 @@ $icon-font-path: "/bower_components/bootstrap-sass-official/assets/fonts/";
     padding: 0.2em 0;
 }
 
-/* Home page view */
-
 .map-background {
-    /* background-image: url('../images/google_maps.jpg'); */
-    position: absolute;
-    top: 0;
     left: 0;
-    bottom: 0;
     right: 0;
 }
 
-/* Search page view */
+/* Home page view */
+.home-page{
+    .map-background {
+        bottom: 0;
+        position: absolute;
+        top: 0;
+    }
+}
 
-.bs-docs-sidebar.places-container {
-  max-height: 600px;
-  overflow: scroll;
+/* Search page view */
+.navbar{
+    .container{
+        margin-left: 0;
+        padding-left: 10px;
+        padding-top: 10px;
+    }
+}
+
+.filters{
+    background-color: #f5f5f5;
+    border: 1px solid #efefef;
+    padding: 10px;
+
+    .bs-docs-sidebar.places-container {
+      max-height: 490px;
+      overflow-y: scroll;
+    }
+}
+
+.results-section{
+    .map-background {
+        height: 524px;
+        margin-top: 20px;
+    }
 }
 
 /* .modal-backdrop fix */
