UI fixes and adding the list view

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -60,3 +60,8 @@ $icon-font-path: "/bower_components/bootstrap-sass-official/assets/fonts/";
 .m-bottom {
   margin-bottom: 10px;
 }
+
+.validation-feedback {
+  padding: 10px;
+}
+
